# ZastTranslate

./: .gitignore  app.py  check_env.py  pyproject.toml
modules/: transcriber.py
