[project]
name = "zasttranslate"
version = "0.9.0"
description = "Video translation & dubbing with voice cloning — 100% local, zero API"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    # PyTorch (routed to cu130 index via [tool.uv.sources])
    "torch==2.10.0",
    "torchaudio==2.10.0",
    # Web UI
    "gradio>=4.0.0",
    # Video download
    "yt-dlp>=2024.0.0",
    # Speech recognition
    "whisperx",
    # LLM translation
    "transformers>=4.35.0",
    "sentencepiece",
    "protobuf",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.43.0",
    # Audio separation
    "demucs>=4.0.0",
    # Audio processing
    "pydub>=0.25.1",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "numpy>=1.26.0",
    # Video assembly
    "ffmpeg-python>=0.2.0",
    # TTS — voice cloning
    "qwen-tts",
    "sox",
    "safetensors",
    "huggingface_hub",
    "tokenizers",
    # Core
    "typing-extensions>=4.10.0",
]

# ---------- uv configuration ----------

[tool.uv]
# Allow packages to be found across multiple indexes without conflict
index-strategy = "unsafe-best-match"

# Override whisperx's torch~=2.8.0 constraint to use our version
override-dependencies = [
    "torch==2.10.0",
    "torchaudio==2.10.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
whisperx = { git = "https://github.com/m-bain/whisperX.git" }
